--- a/azure-webapi/appsettings.json
+++ b/azure-webapi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AzureKeyVault": {
+    "VaultUri": "https://azure-learning-keyvault.vault.azure.net/",
+    "appInsights": "AppInsights-connectionstring"
+  },
   "AllowedHosts": "*"
 }
